# -FAE

./: .coverage  .gitignore  Dockerfile  Dockerfile.frontend  Instruction.txt  README.md  docker-compose.yml  pyproject.toml  seed.py
DOCS/: PROJECT_EVOLUTION_BUGS_FIXED.md
DOCS/Architecture/: PLAN_AND_IDEAS.md
DOCS/Audit/: STRICT_GUIDELINES.md
DOCS/Implementation/: IMPLEMENTATION_NOTES.md
DOCS/QA/: TEST_REPORTS.md
alembic/: env.py
alembic/versions/: 3cd29cb961e8_initial_migration.py  60423c9e5de2_add_operator_code.py  f381fe8f3005_add_version_id_and_max_capacity.py
frontend/: app.js  index.html  style.css
frontend/admin/: app.js  index.html  machine.css  machine.html  machine.js  style.css
frontend/login/: app.js  index.html  style.css
frontend/operator/: app.js  index.html  style.css
frontend_test/: app.js
frontend_test/admin/: app.js  index.html  style.css
frontend_test/login/: app.js  index.html  style.css
frontend_test/operator/: app.js  index.html  style.css
nginx/: default.conf
src/: config.py  main.py
src/application/commands/: handlers.py  login_handler.py
src/application/queries/: dtos.py  handlers.py  interfaces.py
src/applicator_tracking_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/domain/: entities.py  exceptions.py  interfaces.py
src/infrastructure/: auth.py  ioc.py  pubsub.py
src/infrastructure/database/: session.py
src/infrastructure/models/: orm.py
src/infrastructure/queries/: applicator_query.py  dashboard_query.py  machine_query.py  zone_query.py
src/infrastructure/repositories/: repositories.py
src/tests/: conftest.py  test_advanced_security.py  test_api.py  test_integration_security.py  test_invalid_state_patch.py
(+7 files in other folders)
